--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__line">
-                            <a href="index.html" class="header__link">главная</a>
+                            <a href="index.html" class="header__link">Главная</a>
                         </li>                      
                         <li class="header__line">
                             <a href="#" class="header__link  _sub">услуги</a>
