--- a/index.html
+++ b/index.html
@@ -101,37 +101,10 @@
 
         <!--= main -->
         <main class="main">
-<!-- шапка -->
-        <div class="heder-page heder-page_margin">
-            <h1 class="heder-page__title">ЗАХОРОНЕНИЕ</h1>
-            <div class="heder-page__img">
-                <picture>
-                    <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
-                    <source srcset="img/home/grob-500.jpg" type="image/jpeg" media="(max-width: 750px)">
-                    <source srcset="img/home/grob.webp" type="image/webp">
-                    <img src="img/home/grob.jpg" alt="фото гроба">
-                </picture>
-            </div>
-        </div>
-        <!-- текст:Уход человека -->
-        <div class="text-page container">
-            <div class="text-page_margin">Уход человека — это трагедия, сложный период, пережить который один на один очень сложно. Нужно не только осознать, что происходит, но и решать организационные вопросы, что совсем непросто. Необходимо сохранять самообладание, держать все под контролем, а это в данной ситуации не всегда удается.</div>
-        </div>
-        <!-- img: рука+гроб -->
-        <div class="text-img container">
-            <picture>
-                <source srcset="img/__burial/1-500.webp" type="image/webp" media="(max-width: 750px)">
-                <source srcset="img/__burial/1-500.jpg" type="image/jpeg" media="(max-width: 750px)">
-                <source srcset="img/__burial/1.webp" type="image/webp">
-                <img src="img/__burial/1.jpg" alt="рука и гроб">
-            </picture>
-        </div>
-        <!-- текст:Перед захоронением -->
-        <div class="text-page container">
-            <div class="text-page_margin">Перед захоронением оформляются все необходимые документы, приобретаются ритуальная символика, место на кладбище, организовываются поминки. Все эти процедуры отнимают немало времени и сил. Именно поэтому стоит обратиться в компанию, которая оказывает ритуальные услуги. Сколько стоят ритуальные услуги? Какая сумма необходима на погребение? Достаточно ли похоронных, выделенных государством?<br><br>Наша компания оказывает ритуальные услуги под ключ так, чтобы пособие покрывало стоимость похорон. Теперь не нужно думать о том, где взять денег, как вложиться в бюджет. Все это делаем мы за вас.<br><br>Сегодня выплата похоронных в Минске составляет  1476,3 руб . Мы предлагаем своим клиентам 3 пакета услуг разной стоимости.<br><br>В них входят следующее:</div>
-        </div>
-         <!-- Prais -->
-         <div class="box-prais">
+
+
+        <!-- Prais -->
+        <div class="box-prais">
             <div class="prais">
                 <div class="prais__item">
 
@@ -227,18 +200,18 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">адрес</div>
-                <div class="footer__text-1">г.Минск</div>
-                <div class="footer__text-2">пр-т Партизанский 5</div>
+                <div class="footer__text">г.Минск</div>
+                <div class="footer__text">пр-т Партизанский 5</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text-1">+375447695139</div>
-                <div class="footer__text-2">+375295513041</div>
+                <div class="footer__text">+375447695139</div>
+                <div class="footer__text">+375295513041</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
-                <div class="footer__text-1">24 часа</div>
-                <div class="footer__text-2">круглосуточно</div>
+                <div class="footer__text">24 часа</div>
+                <div class="footer__text">круглосуточно</div>
             </div>
         </footer>
         <!-- end wrapper -->
