--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="wrapper">
-
         <!--= heder -->
         <header class="header">
             <div class="header__up">
@@ -101,10 +100,149 @@
 
         <!--= main -->
         <main class="main">
+            <!-- img гроб -->
+            <div class="coffin-img">
+                <picture>
+                <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
+                <source srcset="img/home/grob-500.jpg" type="image/jpeg" media="(max-width: 750px)">
+                <source srcset="img/home/grob.webp" type="image/webp">
+                <img src="img/home/grob.jpg" alt="my_alt">
+                </picture>
+            </div>
+            <!-- соболезнуем-1 -->
+            <div class="box-text">
+                <span class="box-text__span"></span>
+            </div>
+            <!-- три колонки -->
+            <div class="multi">
+                <div class="multi__item">
+                    <!-- cart-1 -->
+                    <div class="cart">
+                        <div class="cart__img">
+                            <picture>
+                            <source srcset="img/home/k1-350.webp" type="image/webp" media="(max-width: 750px)">
+                            <source srcset="img/home/k1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                            <source srcset="img/home/k1.webp" type="image/webp">
+                            <img src="img/home/k1.jpg" alt="my_alt">
+                            </picture>
+                        </div>
+                        <div class="cart__line"></div>
+                        <div class="cart__title">ЧТО ДЕЛАТЬ КОГДА УМЕР БЛИЗКИЙ ?</div>
+                        <div class="cart__sub-title">Когда кто-то умирает, есть ряд вешей которые нужно сделать в первую очередь.</div>
+                        <div class="cart__botton">подробнее</div>
+                    </div>
+                </div>
+                <div class="multi__item">
+                    <!-- cart-2 -->
+                    <div class="cart cart_margin-2">
+                        <div class="cart__img">
+                            <picture>
+                            <source srcset="img/home/k2-350.webp" type="image/webp" media="(max-width: 750px)">
+                            <source srcset="img/home/k2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                            <source srcset="img/home/k2.webp" type="image/webp">
+                            <img src="img/home/k2.jpg" alt="my_alt">
+                            </picture>
+                        </div>
+                        <div class="cart__line"></div>
+                        <div class="cart__title">МАГАЗИН</div>
+                        <div class="cart__sub-title">Каталог всего необходимого для погребения и кремации.</div>
+                        <div class="cart__botton">подробнее</div>
+                    </div>
+                </div>
+                <div class="multi__item">
+                    <!-- cart-3 -->
+                    <div class="cart  cart_margin-3">
+                        <div class="cart__img">
+                            <picture>
+                            <source srcset="img/home/k3-350.webp" type="image/webp" media="(max-width: 750px)">
+                            <source srcset="img/home/k3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                            <source srcset="img/home/k3.webp" type="image/webp">
+                            <img src="img/home/k3.jpg" alt="my_alt">
+                            </picture>
+                        </div>
+                        <div class="cart__line"></div>
+                        <div class="cart__title">КОНТАКТЫ РИТУАЛЬНЫХ АГЕНТОВ</div>
+                        <div class="cart__sub-title">Телефонные номера и иные способы связи, для незамедлительной помощи в тяжёлый момент.</div>
+                        <div class="cart__botton">подробнее</div>
+                    </div>
+                </div>
+            </div>
+            <!-- соболезнуем-2 -->
+            <div class="box-text-2">
+                <span class="box-text-2__span-2"></span>
+            </div>
+            <!-- img рука -->
+            <div class="coffin-img">
+                <picture>
+                <source srcset="img/home/r-1-500.webp" type="image/webp" media="(max-width: 750px)">
+                <source srcset="img/home/r-1-500.jpg" type="image/jpeg" media="(max-width: 750px)">
+                <source srcset="img/home/r-1.webp" type="image/webp">
+                <img src="img/home/r-1.jpg" alt="my_alt">
+                </picture>
+            </div> 
+            <!-- соболезнуем-3 -->
+            <div class="box-text-3">
+                <span class="box-text-3__span-3"></span>
+            </div>
+            <!-- мулти блок -->
+            <div class="age-17">
 
+                <div class="age-17__item-1">
+                    <div class="age-17__img-1">
+                        <picture>
+                            <source srcset="img/home/item-1-400.webp" type="image/webp" media="(max-width: 750px)">
+                            <source srcset="img/home/item-1-400.jpg" type="image/jpeg" media="(max-width: 750px)">
+                            <source srcset="img/home/item-1.webp" type="image/webp">
+                            <img src="img/home/item-1.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                    <div class="age-17__title-1">17 +</div>
+                    <div class="age-17__sub-title-1">лет опыта работы</div>
+                </div>
 
-        <!-- Prais -->
-        <div class="box-prais">
+                <div class="age-17__item-2">
+                    <div class="age-17__img-2">
+                        <picture>
+                            <source srcset="img/home/item-2-400.webp" type="image/webp" media="(max-width: 750px)">
+                            <source srcset="img/home/item-2-400.jpg" type="image/jpeg" media="(max-width: 750px)">
+                            <source srcset="img/home/item-2.webp" type="image/webp">
+                            <img src="img/home/item-2.jpg" alt="my_alt">
+                        </picture>
+                    </div>
+                </div>
+
+                <div class="age-17__item-3">
+                    <div class="age-17__title-3">Кратко о Нас</div>
+                    <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2003 ГОДА.</div>
+                    <div class="age-17__line"></div>
+                    <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошт и консультация по вопросам кремации и захоронения.</div>
+                    <div class="age-17__box-2040">
+                        <div class="age-17__left">
+                            <div class="age-17__2040">
+                                <div class="age-17__2040-title">2 040 +</div>
+                                <div class="age-17__2040-text">число захоронений</div>
+                            </div>
+                            <div class="age-17__1420">
+                                <div class="age-17__1420-title">1420 +</div>
+                                <div class="age-17__1420-text">число кремаций</div>
+                            </div>
+                        </div>
+                        <div class="age-17__right">
+                            <div class="age-17__right-img">
+                                <picture>
+                                    <source srcset="img/home/item-3-350.webp" type="image/webp" media="(max-width: 750px)">
+                                    <source srcset="img/home/item-3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                    <source srcset="img/home/item-3.webp" type="image/webp">
+                                    <img src="img/home/item-3.jpg" alt="my_alt">
+                                </picture>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- Prais -->
+            <div class="box-prais">
             <div class="prais">
                 <div class="prais__item">
 
@@ -186,8 +324,11 @@
                     </div>
                 </div>
             </div>
-        </div>            
+            </div> 
 
+
+
+    
         </main>
 
         <!--= footer -->
@@ -214,7 +355,8 @@
                 <div class="footer__text">круглосуточно</div>
             </div>
         </footer>
-        <!-- end wrapper -->
+
+    <!-- end  -->
     </div>
 
 <script src="js/script.js"></script>
