--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
                             <img src="img/home/item-1.jpg" alt="my_alt">
                         </picture>
                     </div>
-                    <div class="age-17__title-1">17 +</div>
-                    <div class="age-17__sub-title-1">лет опыта работы</div>
+                        <div class="age-17__title-1">17+</div>
+                        <div class="age-17__sub-title-1">лет опыта работы</div>
                 </div>
 
                 <div class="age-17__item-2">
@@ -216,15 +216,20 @@
                     <div class="age-17__sub-title-3">МЫ ПРЕДОСТАВЛЯЕМ ЛУЧШИЕ УСЛУГИ ПО ПОХОРОНАМ И КРЕМАЦИИ С 2003 ГОДА.</div>
                     <div class="age-17__line"></div>
                     <div class="age-17__text-3">Вы не остаетесь с горем один на один, мы многие годы помогаем людям в трудные минуты их жизни, круглосуточная помошт и консультация по вопросам кремации и захоронения.</div>
+                    
                     <div class="age-17__box-2040">
                         <div class="age-17__left">
                             <div class="age-17__2040">
-                                <div class="age-17__2040-title">2 040 +</div>
+                                <div class="age-17__2040-title">2 040+</div>
                                 <div class="age-17__2040-text">число захоронений</div>
                             </div>
                             <div class="age-17__1420">
-                                <div class="age-17__1420-title">1420 +</div>
+                                <div class="age-17__1420-title">1 420+</div>
                                 <div class="age-17__1420-text">число кремаций</div>
+                            </div>
+                            <div class="age-17__none-17">
+                                <div class="age-17__none-title">17+</div>
+                                <div class="age-17__none-text">лет опыта работы</div>
                             </div>
                         </div>
                         <div class="age-17__right">
@@ -240,7 +245,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <!-- Prais -->
             <div class="box-prais">
             <div class="prais">
