--- a/ritual-agent.html
+++ b/ritual-agent.html
@@ -19,12 +19,12 @@
                 <h1 class="header__title"><span>Ритуальные услуги в Минске</span></h1>
                 <a href="tel:+375447695139" class="header__tel">тел.+375 44 769 51 39</a>
             </div>
-            <div class="header__burger">
-                <div class="header__button">
-                    <span></span>
-                </div>
-            </div>
             <div class="header__down">
+                <div class="header__burger">
+                    <div class="header__button">
+                        <span></span>
+                    </div>
+                </div>
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li class="header__line">
@@ -255,18 +255,18 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">адрес</div>
-                <div class="footer__text-1">г.Минск</div>
-                <div class="footer__text-2">пр-т Партизанский 5</div>
+                <div class="footer__text">г.Минск</div>
+                <div class="footer__text">пр-т Партизанский 5</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text-1">+375447695139</div>
-                <div class="footer__text-2">+375295513041</div>
+                <div class="footer__text">+375447695139</div>
+                <div class="footer__text">+375295513041</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
-                <div class="footer__text-1">24 часа</div>
-                <div class="footer__text-2">круглосуточно</div>
+                <div class="footer__text">24 часа</div>
+                <div class="footer__text">круглосуточно</div>
             </div>
         </footer>
         <!-- end wrapper -->
