--- a/copter-graves.html
+++ b/copter-graves.html
@@ -200,18 +200,18 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">адрес</div>
-                <div class="footer__text-1">г.Минск</div>
-                <div class="footer__text-2">пр-т Партизанский 5</div>
+                <div class="footer__text">г.Минск</div>
+                <div class="footer__text">пр-т Партизанский 5</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text-1">+375447695139</div>
-                <div class="footer__text-2">+375295513041</div>
+                <div class="footer__text">+375447695139</div>
+                <div class="footer__text">+375295513041</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
-                <div class="footer__text-1">24 часа</div>
-                <div class="footer__text-2">круглосуточно</div>
+                <div class="footer__text">24 часа</div>
+                <div class="footer__text">круглосуточно</div>
             </div>
         </footer>
         <!-- end wrapper -->
