--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
                                     <a href="copter-graves.html" class="header__link-sub">Копка могилы</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Аренда катафалка</a>
+                                    <a href="rent-catatal.html" class="header__link-sub">Аренда катафалка</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Носильщик гроба</a>
+                                    <a href="loaders.html" class="header__link-sub">Носильщик гроба</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Груз 200</a>
+                                    <a href="cargo-200.html" class="header__link-sub">Груз 200</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Помощь в изготовлении памятников</a>
+                                    <a href="production-of-monuments.html" class="header__link-sub">Помощь в изготовлении памятников</a>
                                 </li>
                             </ul>
                         </li>
@@ -62,10 +62,10 @@
                             <a href="#" class="header__link  _sub">товары</a>
                             <ul class="header__list-sub">
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Гробы</a>
+                                    <a href="shop-coffins.html" class="header__link-sub">Гробы</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Венки ритуальные</a>
+                                    <a href="shop-wreaths.html" class="header__link-sub">Венки ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
                                     <a href="#" class="header__link-sub">Корзины ритуальные</a>
