--- a/shop-wreaths.html
+++ b/shop-wreaths.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/home/favicon.png">
     <link rel="stylesheet" href="css/style.css">
-    <title>Венки ритуальные</title>
+    <title>Гробы</title>
 </head>
 <body>
     <div class="wrapper">
@@ -102,26 +102,216 @@
         <!--= main -->
         <main class="main">
 
-
-<!-- шапка -->
-        <div class="heder-page heder-page_margin">
-            <h1 class="heder-page__title">Венки ритуальные</h1>
-            <div class="heder-page__img">
-                <picture>
-                    <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
-                    <source srcset="img/home/grob-500.jpg" type="image/jpeg" media="(max-width: 750px)">
-                    <source srcset="img/home/grob.webp" type="image/webp">
-                    <img src="img/home/grob.jpg" alt="фото гроба">
-                </picture>
+            <!-- шапка -->
+            <div class="heder-page heder-page_margin">
+                <h1 class="heder-page__title">Гробы</h1>
+                <div class="heder-page__img">
+                    <picture>
+                        <source srcset="img/home/grob-500.webp" type="image/webp" media="(max-width: 750px)">
+                        <source srcset="img/home/grob-500.jpg" type="image/jpeg" media="(max-width: 750px)">
+                        <source srcset="img/home/grob.webp" type="image/webp">
+                        <img src="img/home/grob.jpg" alt="фото гроба">
+                    </picture>
+                </div>
             </div>
-        </div>
 
+            <!-- блок магазина -->
+            <div class="shop">
+                <!-- предупреждение -->
+                <div class="attention">
+                    <div class="attention__text">Уважаемые клиенты и посетители нашего сайта, обращаем Ваше внимание, что цены на продукцию, могут быть не корректными, так как нет возможности синхронизировать и единомоментно внести изменения на весь ассортимент сразу. Будьте любезны, перед тем как буквально «ехать» в магазин, уточните пожалуйста цену на заинтересовавший Вас товар, у нашего сотрудника по телефонам, указанным на сайте. С уважением, администрация сайта.</div>
+                </div>
+                <!-- блок с товарами -->
+                <div class="shop-block">
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб лакированный гл 200</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/1-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/1.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/1.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">420 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб "лакированный скрипка гл-скрипка"</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/2-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/2.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/2.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">360 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб комбинированный скрипка гк-скрипка</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/3-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/3.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/3.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">310 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб комбинированный красный гк-1к/б</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/4-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/4-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/4.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/4.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">270 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб комбинированный красный гк-2к/ч</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/5-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/5-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/5.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/5.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">270 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб комбинированный синий гк-4</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/6-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/6-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/6.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/6.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">270 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб социальный стандарт синий гс-2</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/7-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/7-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/7.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/7.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">150 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">150 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб социальный стандарт коричневый гс-3</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/9-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/9-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/9.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/9.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">150 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="shop-block__item flex_coffins">
+                        <!-- карточка товара -->
+                        <div class="card">
+                            <div class="card__body">
+                                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
+                                <div class="card__img">
+                                    <picture>
+                                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
+                                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
+                                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
+                                    </picture>
+                                </div>
+                                <div class="card__prais">150 BYN</div>
+                                <a class="card__button" href="contacts.html">купить</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-<!-- блок магазина -->
-<div class="shop">
 
 <!-- конец блок магазина -->
-</div>
+    
+
+
+        </div>
 
         </main>
         <!--= footer -->
@@ -134,18 +324,18 @@
             </div>
             <div class="footer__item">
                 <div class="footer__title">адрес</div>
-                <div class="footer__text-1">г.Минск</div>
-                <div class="footer__text-2">пр-т Партизанский 5</div>
+                <div class="footer__text">г.Минск</div>
+                <div class="footer__text">пр-т Партизанский 5</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">телефоны</div>
-                <div class="footer__text-1">+375447695139</div>
-                <div class="footer__text-2">+375295513041</div>
+                <div class="footer__text">+375447695139</div>
+                <div class="footer__text">+375295513041</div>
             </div>
             <div class="footer__item">
                 <div class="footer__title">часы работы</div>
-                <div class="footer__text-1">24 часа</div>
-                <div class="footer__text-2">круглосуточно</div>
+                <div class="footer__text">24 часа</div>
+                <div class="footer__text">круглосуточно</div>
             </div>
         </footer>
         <!-- end wrapper -->
