--- a/shop-coffins.html
+++ b/shop-coffins.html
@@ -128,7 +128,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб лакированный гл 200</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/1-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -146,7 +146,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб "лакированный скрипка гл-скрипка"</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/2-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -164,7 +164,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб комбинированный скрипка гк-скрипка</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/3-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -182,7 +182,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб комбинированный красный гк-1к/б</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/4-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/4-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -200,7 +200,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб комбинированный красный гк-2к/ч</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/5-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/5-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -218,7 +218,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб комбинированный синий гк-4</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/6-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/6-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -236,7 +236,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб социальный стандарт синий гс-2</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/7-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/7-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -254,7 +254,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -272,7 +272,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб социальный стандарт коричневый гс-3</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/9-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/9-350.jpg" type="image/jpeg" media="(max-width: 750px)">
@@ -290,7 +290,7 @@
                         <div class="card">
                             <div class="card__body">
                                 <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                                <div class="card__img">
+                                <div class="card__img card__img_height">
                                     <picture>
                                         <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
                                         <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
