--- a/#blocks.html
+++ b/#blocks.html
@@ -57,183 +57,19 @@
 <!--= магазин -->
 
 <!-- блок с товарами -->
-<div class="shop-block">
-    <div class="shop-block__item">
-        <!-- карточка товара -->
+<div class="shop-block"> 
+    <!-- карточка товара -->   
+    <div class="shop-block__item flex_coffins">
         <div class="card">
             <div class="card__body">
                 <div class="card__title">Гроб лакированный гл 200</div>
-                <div class="card__img">
+                <div class="card__img card__img_height">
                     <picture>
-                        <source srcset="img/__shop-coffins/1-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/1-350.jpg" type="image/jpeg" media="(max-width: 750px)">
                         <source srcset="img/__shop-coffins/1.webp" type="image/webp">
                         <img src="img/__shop-coffins/1.jpg" alt="гроб">
                     </picture>
                 </div>
-                <div class="card__prais">420 BYN9</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб "лакированный скрипка гл-скрипка"</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/2-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/2-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/2.webp" type="image/webp">
-                        <img src="img/__shop-coffins/2.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">360 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб комбинированный скрипка гк-скрипка</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/3-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/3-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/3.webp" type="image/webp">
-                        <img src="img/__shop-coffins/3.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">310 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб комбинированный красный гк-1к/б</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/4-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/4-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/4.webp" type="image/webp">
-                        <img src="img/__shop-coffins/4.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">270 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб комбинированный красный гк-2к/ч</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/5-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/5-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/5.webp" type="image/webp">
-                        <img src="img/__shop-coffins/5.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">270 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб комбинированный синий гк-4</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/6-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/6-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/6.webp" type="image/webp">
-                        <img src="img/__shop-coffins/6.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">270 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб социальный стандарт синий гс-2</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/7-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/7-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/7.webp" type="image/webp">
-                        <img src="img/__shop-coffins/7.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">150 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
-                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">150 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб социальный стандарт коричневый гс-3</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/9-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/9-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/9.webp" type="image/webp">
-                        <img src="img/__shop-coffins/9.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">150 BYN</div>
-                <a class="card__button" href="contacts.html">купить</a>
-            </div>
-        </div>
-    </div>
-    <div class="shop-block__item">
-        <!-- карточка товара -->
-        <div class="card">
-            <div class="card__body">
-                <div class="card__title">Гроб социальный стандарт синий гс-1</div>
-                <div class="card__img">
-                    <picture>
-                        <source srcset="img/__shop-coffins/8-350.webp" type="image/webp" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/8-350.jpg" type="image/jpeg" media="(max-width: 750px)">
-                        <source srcset="img/__shop-coffins/8.webp" type="image/webp">
-                        <img src="img/__shop-coffins/8.jpg" alt="гроб">
-                    </picture>
-                </div>
-                <div class="card__prais">150 BYN</div>
+                <div class="card__prais">420 BYN</div>
                 <a class="card__button" href="contacts.html">купить</a>
             </div>
         </div>
