--- a/#blocks.html
+++ b/#blocks.html
@@ -56,6 +56,11 @@
 
 <!--= магазин -->
 
+<!-- предупреждение -->
+<div class="attention">
+    <div class="attention__text">Уважаемые клиенты и посетители нашего сайта, обращаем Ваше внимание, что цены на продукцию, могут быть не корректными, так как нет возможности синхронизировать и единомоментно внести изменения на весь ассортимент сразу. Будьте любезны, перед тем как буквально «ехать» в магазин, уточните пожалуйста цену на заинтересовавший Вас товар, у нашего сотрудника по телефонам, указанным на сайте. С уважением, администрация сайта.</div>
+</div>
+
 <!-- блок с товарами -->
 <div class="shop-block"> 
     <!-- карточка товара -->   
