--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                     <a href="shop-wreaths.html" class="header__link-sub">Венки ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Корзины ритуальные</a>
+                                    <a href="shop-baskets.html" class="header__link-sub">Корзины ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
                                     <a href="#" class="header__link-sub">Кресты</a>
