--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                                     <a href="shop-baskets.html" class="header__link-sub">Корзины ритуальные</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Кресты</a>
+                                    <a href="shop-crosses.html" class="header__link-sub">Кресты</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Одежда</a>
+                                    <a href="shop-clothes.html" class="header__link-sub">Одежда</a>
                                 </li>
                                 <li class="header__line-sub">
-                                    <a href="#" class="header__link-sub">Доставка и оплата</a>
+                                    <a href="shop-payment.html" class="header__link-sub">Доставка и оплата</a>
                                 </li>
                             </ul>
                         </li>
