--- a/shop-baskets.html
+++ b/shop-baskets.html
@@ -115,6 +115,79 @@
                 </div>
             </div>
 
+            <!-- предупреждение -->
+            <div class="attention">
+                <div class="attention__text">Уважаемые клиенты и посетители нашего сайта, обращаем Ваше внимание, что цены на продукцию, могут быть не корректными, так как нет возможности синхронизировать и единомоментно внести изменения на весь ассортимент сразу. Будьте любезны, перед тем как буквально «ехать» в магазин, уточните пожалуйста цену на заинтересовавший Вас товар, у нашего сотрудника по телефонам, указанным на сайте. С уважением, администрация сайта.</div>
+            </div>
+
+            <!-- блок с товарами -->
+            <div class="shop-block"> 
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к 7/к</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/1.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/1.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">65 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к 7/ф</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/2.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/2.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">65 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-4/с</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/3.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/3.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">40 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- карточка товара -->   
+                <div class="shop-block__item flex-baskets">
+                    <div class="card">
+                        <div class="card__body">
+                            <div class="card__title">Корзина к-4/ф</div>
+                            <div class="card__img  card__img_height-baskets">
+                                <picture>
+                                    <source srcset="img/__shop-baskets/4.webp" type="image/webp">
+                                    <img src="img/__shop-baskets/4.jpg" alt="гроб">
+                                </picture>
+                            </div>
+                            <div class="card__prais">40 BYN</div>
+                            <a class="card__button" href="contacts.html">купить</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
 
 
